fix: PostService의 createComment() 메서드에서 존재하지 않는 글인지 체크하는 로직 수정